Add read more note and popup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_activity_analyze_entry">Analyze an Entry</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
+    <string name="action_delete">Delete all data</string>
     <string name="action_reminder">Reminder time</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="welcome_message">Welcome to CBT Helper!</string>
@@ -44,12 +45,14 @@
     <string name="thoughtsQuestion">What were you thinking that led you to feel that way?</string>
     <string name="thoughtsHint">Add your thoughts here. Please write only thoughts you had at that time, not what you think about it now.</string>
 
-    <string name="assumptionsQuestion">Now take a minute and ask yourself, \"What assumptions do I have about myself or others that influenced the way I thought and felt about this situation?\"</string>
+    <string name="assumptionsQuestion">Now take a minute and ask yourself, \"What assumptions/beliefs might I have about myself or others that may have influenced how I thought and felt %1$s?\"</string>
+    <string name="assumptionsReadMoreHeading">Assumptions</string>
+    <string name="assumptionsReadMore">We all have basic assumptions about ourselves, whether positive or negative. These are things like “I am unloveable”, “I am safe”, “I am attractive” or “I am stupid”. These assumptions are deep core beliefs that we often don’t even realize we have about ourselves. They are general and not specific to just one situation or conversation, but they do influence the way we think in our day-to-day interactions.\n\nFor example, Mary feels vulnerable in many different situations (even in non-dangerous situations). She does not realize that this feeling comes from her core assumptions “I am easily victimized” and “I am unworthy of protection”.\n\nRather than a well-formed thought, core assumptions are instead more like a feeling or a general sense we have about ourselves.</string>
 
     <string name="expressionQuestion">What did you do and say that showed the emotions you felt?</string>
     <string name="expressionHint">For example, “I cried”, or “I yelled at…”</string>
 
-    <string name="relationshipsQuestion">How did the way you showed your emotions affect other people? How did they respond to what you said and did?</string>
+    <string name="relationshipsQuestion">How did your behavior (the way you showed your emotions) affect other people? How did they respond to what you said and did?</string>
     <string name="relationshipsQuestionBottled">How did the way you hid your emotions affect other people?</string>
     <string name="relationshipsHint"></string>
 
@@ -112,7 +115,7 @@
     <string name="validitySummary3Irrational">These types of thinking errors indicate that there is room to improve your emotional health. The %1$s could have been healthier.</string>
     <string name="validitySummary3Rational">You may have made thinking errors which were not identifiable by this test, but let’s suppose you didn’t. Let’s assume that your thoughts were fully rational and therefore led to a healthy emotional experience. This means the %1$s you felt in this situation was likely healthy.</string>
     <string name="validitySummary4Irrational">Do You Want to Improve?</string>
-    <string name="validitySummary4Rational">Contratulations! But what if the way you felt was not actually good? How is it healthy to feel negative emotions? If this is a question you have then click there to read an explanation of how even negative emotions can be healthy.</string>
+    <string name="validitySummary4Rational">Congratulations! But what if the way you felt was not actually good? How is it healthy to feel negative emotions? If this is a question you have then click there to read an explanation of how even negative emotions can be healthy.</string>
     <string name="validitySummary5Irrational">Let’s explore how you could have been healthier. Let’s first try replace the irrational thoughts that you had with a more rational way of thinking.</string>
     <string name="validitySummary5Rational">Okay, let’s move on. Let’s examine the way you expressed what you felt.</string>
     <string name="validitySummary5">Let’s explore how you could have been healthier. Let’s first try replace the irrational thoughts that you had with a more rational way of thinking.</string>
